﻿Version 2.0
- Process overhaul: load and apply RICO settings before game prefab initialisation by patching BuildingInfo.InitializePrefab(), instead of modifying post-initialisation
- Implement growables
- Add button to access RICO settings for from building info panels
- Overhaul building AIs, implementing separate (inheriting) AIs for growables and ploppables
- Allow 'none' as valid UI catgegory, and explicitly default to that if no valid UI category can be found or guessed
- Remove error for zero workplaces for dummy service
- Fix automatic workplace allocation sometimes not correctly identifying current level in options editor
- Fix 'Leisure' and 'Tourism' tooltips being swapped around
- Standardise lighting for builiding preview renders
- Remove redundant CalculateHomeCount Harmony patch
- Code cleanup


Version 1.3

- Add override for building levels on game load (only applies to buildings in LocalRICOSettings.xml)
- Add building list 'filter by settings' function
- Suppress errors for buildings that are deactivated
- Tweak settings window layout and widen options panel
- Tweak options panel level menu update on service and subservice changes
- Logging tweaks


Version 1.2.5

- Building level errors in local settings for single-level building categories are now quietly logged


Version 1.2.4

- Configuration errors are now clearly divided into fatal and non-fatal categories
- Non-fatal errors for author settings are now quietly logged and do not generate an alert
- Improve building level error checking and correction
- Improve feedback on whether errors are in local or author settings
- Improve job level breakdowns where old-style workplace counts are used alongside unxepected subservice definitions
- Options panel now refreshes when settings are saved
- Correct rounding errors in options panel when calculating workplace breakdowns


Version 1.2.3

- Now intelligently guesses correct UI category when an invalid category has been provided