@@ -3,6 +3,7 @@
 - Implement growables
 - Add button to access RICO settings for from building info panels
 - Overhaul building AIs, implementing separate (inheriting) AIs for growables and ploppables
+- Generate standardised building preview images for thumbnail sprites
 - Allow 'none' as valid UI catgegory, and explicitly default to that if no valid UI category can be found or guessed
 - Remove error for zero workplaces for dummy service
 - Fix automatic workplace allocation sometimes not correctly identifying current level in options editor
